101, command line and pages tutorials

--- a/projects/github/guides/101.md
+++ b/projects/github/guides/101.md
@@ -39,10 +39,43 @@ Insights: A drop-down menu option that contains links to different analytic tool
 Pulse: Pulse is our project’s dashboard. It contains information on the work that has been completed and the work in progress.
 Graphs: Graphs provide a more granular view of the repository activity, including who has contributed, when the work has been done, and who has forked the repository.
 
-#Special Files
+# Special Files
 
-###CONTRIBUTING.md
+### CONTRIBUTING.md
 The CONTRIBUTING.md is used to describe the process for collaborating on the repository. The link to the CONTRIBUTING.md file is shown anytime someone begins to create a new issue or pull request.
 
-###ISSUE_TEMPLATE.md
+### ISSUE_TEMPLATE.md
 The ISSUE_TEMPLATE.md is yet another special file you can use to pre-populate the body of an issue. For example, if you always want to gather certain types of information for bug reports, you can include it in the issue template and every new issue will be opened with your recommended starter text.
+
+
+# Github Flow
+
+To quickly summarize the GitHub Flow, it is a branch based workflow that enables you to make changes to a project’s file without altering the published content until you are ready to share you amazing changes :sparkles:.
+
+Branches are an important part of the GitHub workflow because they allow us to separate our work from the master branch. The trick in managing branches with a team is to keep them concise and short lived. In other words, a single branch should represent a single new feature or bug fix. And, while GitHub doesn’t limit the number of branches you can have, it makes things a lot less confusing when you only keep them active for a few days and delete them after they have been merged (we will discuss merging a little later).
+
+## Add a New File
+To add your pin, add a new file to the class repository. We gave you specific instructions above, but first consider some of the helpful ways GitHub allows you to add files to your projects.
+
+- File Uploader: if you already have a file on your computer that you would like to add to your repository, simply drag and drop it in to the repository window on GitHub.
+- Create New File: you can also choose to create a new file in your repository by clicking the Create new file button. This opens a simple, web-based file editor. First, provide a file name with the appropriate file extension. The file extension will tell GitHub how to render your content.
+- Modifying an Existing File: Sometimes you simply need to make a change to an existing file. If this is the case, navigate to the file using the file directory in the Code tab. Once you have opened the file, click the pencil icon in the top right to open the file in edit mode.
+
+## Commit Your Changes
+When you are finished creating or making changes to a file on GitHub, scroll to the bottom of the page. There, find a Commit new file section.
+
+In the first field, type a commit message. The commit message should briefly tell others about the changes you are introducing to the file.
+
+# Rules to Live By For Commits:
+- Don’t end your commit with a period.
+- Keep your commits to 50 characters or less. Add extra detail in the extended description window, if necessary. This is located just below the subject line.
+- Commits use the imperative mood. Add instead of Added. Merge instead of Merged.
+ -Think of your commit as expressing intent to introduce a change.
+- Choose Your Branch
+
+Next, designate where you want your changes to be committed. If you were on your branch when you clicked the Create new file button, GitHub will prompt you to commit directly to that branch. But, if you forgot to create a new branch, you can do it now.
+
+
+''' git status'''
+
+git status is a command you will use often to verify the current state of your repository and the files it contains. Right now, we can see that we are on branch master, everything is up to date with origin/master and our working directory is clean.
