--- a/projects/github/guides/101.md
+++ b/projects/github/guides/101.md
@@ -79,3 +79,14 @@ Next, designate where you want your changes to be committed. If you were on your
 ''' git status'''
 
 git status is a command you will use often to verify the current state of your repository and the files it contains. Right now, we can see that we are on branch master, everything is up to date with origin/master and our working directory is clean.
+
+
+# Changing core.editor
+To change the default editor that git uses, you can use the git config core.editor setting. Every text editor is assigned to the core.editor setting differently, but thankfully there is a GitHub Help article about how to associate a specific editor as your default editor. Using the Atom text editor as an example it would look something like this:
+
+Make sure your terminal application is closed.
+
+ - Install Atom.
+
+Enter the following in your terminal application: git config --global core.editor "atom --wait".
+In some instances, you will need to use the installation path of Atom when setting the config settings.
