Add old projects

--- a/projects/github/guides/101.md
+++ b/projects/github/guides/101.md
@@ -76,7 +76,7 @@ In the first field, type a commit message. The commit message should briefly tel
 Next, designate where you want your changes to be committed. If you were on your branch when you clicked the Create new file button, GitHub will prompt you to commit directly to that branch. But, if you forgot to create a new branch, you can do it now.
 
 
-''' git status'''
+# Git status
 
 git status is a command you will use often to verify the current state of your repository and the files it contains. Right now, we can see that we are on branch master, everything is up to date with origin/master and our working directory is clean.
 
