--- a/notebooks/PythonCheatSheat.ipynb
+++ b/notebooks/PythonCheatSheat.ipynb
@@ -1419,6 +1419,64 @@
     "htmlElem.send_keys(Keys.END)     # scrolls to bottom\n",
     "htmlElem.send_keys(Keys.HOME)    # scrolls to top"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excel Documents\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "\n",
+    "wb = openpyxl.load_workbook('example.xlsx')\n",
+    "wb.get_sheet_names()\n",
+    "#['Sheet1', 'Sheet2', 'Sheet3']\n",
+    "sheet = wb.get_sheet_by_name('Sheet3')\n",
+    "sheet.title\n",
+    "anotherSheet = wb.active\n",
+    "sheet['A1'].value\n",
+    "'Row ' + str(c.row) + ', Column ' + c.column + ' is ' + c.value\n",
+    "'Cell ' + c.coordinate + ' is ' + c.value\n",
+    "for i in range(1, 8, 2):\n",
+    "        print(i, sheet.cell(row=i, column=2).value)\n",
+    "        \n",
+    "sheet.max_row\n",
+    "sheet.max_column\n",
+    "\n",
+    "get_column_letter(27)\n",
+    "# 'AA'\n",
+    "\n",
+    "column_index_from_string('AA')\n",
+    "# 27\n",
+    "\n",
+    "tuple(sheet['A1':'C3'])\n",
+    "for rowOfCellObjects in sheet['A1':'C3']:\n",
+    "    for cellObj in rowOfCellObjects:\n",
+    "        print(cellObj.coordinate, cellObj.value)\n",
+    "    print('--- END OF ROW ---')\n",
+    "    \n",
+    "for cellObj in sheet.columns[1]:\n",
+    "    print(cellObj.value)\n",
+    "    \n",
+    "wb = openpyxl.Workbook()\n",
+    "sheet = wb.active\n",
+    "sheet.title\n",
+    "#'Sheet'\n",
+    "sheet.title = 'Spam Bacon Eggs Sheet'\n",
+    "wb.save('example_copy.xlsx')\n",
+    "wb.create_sheet()\n",
+    "wb.create_sheet(index=0, title='First Sheet')\n",
+    "wb.remove_sheet(wb.get_sheet_by_name('Middle Sheet'))\n",
+    "sheet['A1'] = 'Hello world!'"
+   ]
   }
  ],
  "metadata": {
